--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176895">Why It's So Hard to Learn Another Language After Childhood</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175275">Fractal is a new messaging app for the Gnome desktop, powered by Matrix</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://time.com/5261446/language-critical-period-age/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=alberto_ol">alberto_ol</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 06:21:44 &nbsp;•&nbsp;
-                                    13 comments &nbsp;•&nbsp;
-                                    14.0 points
+                                    <a class="node" href="https://medium.com/we-distribute/fractal-is-a-new-messaging-app-for-the-gnome-desktop-powered-by-matrix-a4f219cb1095">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=strypey">strypey</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 22:40:23 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    15.0 points
                                 </span>
                             </td>
                         </tr>
@@ -286,6 +286,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172850">Revolutionary Aluminum Process Eliminates Emissions, Produces Oxygen</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.engineering.com/AdvancedManufacturing/ArticleID/16941/Revolutionary-Aluminum-Process-Eliminates-Emissions-Produces-Oxygen.aspx">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 15:15:33 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    13.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17172221">Kilauea Volcano’s Lava Fields Offer Scientists a Mars-Like Environment</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -334,26 +354,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=bit_4l">bit_4l</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 04:33:50 &nbsp;•&nbsp;
                                     None comments &nbsp;•&nbsp;
-                                    12.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172850">Revolutionary Aluminum Process Eliminates Emissions, Produces Oxygen</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.engineering.com/AdvancedManufacturing/ArticleID/16941/Revolutionary-Aluminum-Process-Eliminates-Emissions-Produces-Oxygen.aspx">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 15:15:33 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
                                     12.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 09:20:03.786951</strong>
+            <strong>Last update at 2018-05-29 09:30:03.042696</strong>
         </div>
     </div>
 </div>
