--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166598">Kitty Marion: an actress who became a suffragette who planted bombs</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.bbc.co.uk/news/stories-44210012">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=DanBC">DanBC</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 12:17:18 &nbsp;•&nbsp;
-                                    108 comments &nbsp;•&nbsp;
-                                    125.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17164822">The emotional journey of creating anything great</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -473,7 +453,7 @@
                                     <a class="node" href="http://www.cbc.ca/news/business/simplii-data-hack-1.4680575">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=t1o5">t1o5</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 20:38:07 &nbsp;•&nbsp;
-                                    72 comments &nbsp;•&nbsp;
+                                    73 comments &nbsp;•&nbsp;
                                     104.0 points
                                 </span>
                             </td>
@@ -533,7 +513,7 @@
                                     <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 17:24:27 &nbsp;•&nbsp;
-                                    71 comments &nbsp;•&nbsp;
+                                    73 comments &nbsp;•&nbsp;
                                     101.0 points
                                 </span>
                             </td>
@@ -555,6 +535,26 @@
                                     2018-05-26 13:27:21 &nbsp;•&nbsp;
                                     76 comments &nbsp;•&nbsp;
                                     101.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
+                                    19 comments &nbsp;•&nbsp;
+                                    99.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 09:50:04.027021</strong>
+            <strong>Last update at 2018-05-29 10:00:03.211012</strong>
         </div>
     </div>
 </div>
