--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17176208">US Life Expectancy Likely to Drop for Third Straight Year</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.geek.com/science/us-life-expectancy-likely-to-drop-for-third-straight-year-1741319/?source">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=sudouser">sudouser</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 03:15:20 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    5.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17176111">Top API Testing Tools (Details and Updates Done for You)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -313,26 +333,6 @@
                                     <a class="node" href="http://opensourceprojects.org/android-game-programming-development-for-beginners/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=mondgott">mondgott</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:55:44 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    5.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171706">Invisible asymptotes, and strategic planning at Amazon</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.eugenewei.com/blog/2018/5/21/invisible-asymptotes">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 10:43:01 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     5.0 points
                                 </span>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 10:40:03.247948</strong>
+            <strong>Last update at 2018-05-29 10:50:04.290282</strong>
         </div>
     </div>
 </div>
