--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -426,6 +426,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172287">Perceived Physical Activity and Mortality: Study</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.health.harvard.edu/blog/mind-over-matter-how-fit-you-think-you-are-versus-actual-fitness-2017081412282">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 13:33:30 &nbsp;•&nbsp;
+                                    135 comments &nbsp;•&nbsp;
+                                    225.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17139881">Google Home Beats Amazon Echo in Q1 2018 Smart Speaker Shipments</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -455,26 +475,6 @@
                                     2018-05-23 14:40:17 &nbsp;•&nbsp;
                                     147 comments &nbsp;•&nbsp;
                                     225.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172287">Perceived Physical Activity and Mortality: Study</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.health.harvard.edu/blog/mind-over-matter-how-fit-you-think-you-are-versus-actual-fitness-2017081412282">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 13:33:30 &nbsp;•&nbsp;
-                                    135 comments &nbsp;•&nbsp;
-                                    224.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17162971">The DisplayPort Pin 20 Problem</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172524">Emacs 26.1 released</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://monitorinsider.com/displayport/dp_pin20_controversy.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 16:49:54 &nbsp;•&nbsp;
-                                    66 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 14:19:04 &nbsp;•&nbsp;
+                                    81 comments &nbsp;•&nbsp;
                                     217.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 10:40:03.247948</strong>
+            <strong>Last update at 2018-05-29 10:50:04.290282</strong>
         </div>
     </div>
 </div>
