--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -433,7 +433,7 @@
                                     <a class="node" href="https://bugzilla.mozilla.org/1460069">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=velmu">velmu</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:32:46 &nbsp;•&nbsp;
-                                    54 comments &nbsp;•&nbsp;
+                                    55 comments &nbsp;•&nbsp;
                                     110.0 points
                                 </span>
                             </td>
@@ -466,6 +466,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17175421">Invisible asymptotes</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.eugenewei.com/blog/2018/5/21/invisible-asymptotes">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lpolovets">lpolovets</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:34:29 &nbsp;•&nbsp;
+                                    13 comments &nbsp;•&nbsp;
+                                    105.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17169810">Empiricism and the limits of gradient descent</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -486,15 +506,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175421">Invisible asymptotes</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175350">PS4-5.05-Kernel-Exploit: A fully implemented kernel exploit for the PS4</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.eugenewei.com/blog/2018/5/21/invisible-asymptotes">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lpolovets">lpolovets</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:34:29 &nbsp;•&nbsp;
-                                    13 comments &nbsp;•&nbsp;
-                                    104.0 points
+                                    <a class="node" href="https://github.com/Cryptogenic/PS4-5.05-Kernel-Exploit">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:06:24 &nbsp;•&nbsp;
+                                    18 comments &nbsp;•&nbsp;
+                                    103.0 points
                                 </span>
                             </td>
                         </tr>
@@ -513,7 +533,7 @@
                                     <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 17:24:27 &nbsp;•&nbsp;
-                                    78 comments &nbsp;•&nbsp;
+                                    80 comments &nbsp;•&nbsp;
                                     102.0 points
                                 </span>
                             </td>
@@ -534,26 +554,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=panic">panic</a></strong> &nbsp;•&nbsp;
                                     2018-05-27 08:28:14 &nbsp;•&nbsp;
                                     20 comments &nbsp;•&nbsp;
-                                    102.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17162057">Update: The agenda-driven edits of Philip Cross and Wikipedia's response</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://wikipedia.fivefilters.org/agenda.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=k1m">k1m</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 14:02:42 &nbsp;•&nbsp;
-                                    51 comments &nbsp;•&nbsp;
                                     102.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 11:00:03.302981</strong>
+            <strong>Last update at 2018-05-29 11:10:03.319444</strong>
         </div>
     </div>
 </div>
