--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172850">Revolutionary Aluminum Process Eliminates Emissions, Produces Oxygen</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.engineering.com/AdvancedManufacturing/ArticleID/16941/Revolutionary-Aluminum-Process-Eliminates-Emissions-Produces-Oxygen.aspx">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 15:15:33 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
-                                    13.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17172221">Kilauea Volcano’s Lava Fields Offer Scientists a Mars-Like Environment</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -406,6 +386,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17177884">Apple Will Go All-OLED in 2018</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-29/asia-display-makers-dip-on-report-apple-will-go-all-oled-in-2018">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jkjustinkumar">jkjustinkumar</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 10:26:13 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    6.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17173987">GitHub and ZenHub give us a glimpse into the collaborative future of work</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 11:20:03.352547</strong>
+            <strong>Last update at 2018-05-29 11:30:03.792215</strong>
         </div>
     </div>
 </div>
