--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17176920">Clean code practices with JavaScript</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.atyantik.com/clean-code-practices-javascript/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tirthbodawala">tirthbodawala</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 06:31:06 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    12.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17176522">Open Source vs. Closed Source?</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -386,26 +406,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178031">High school physics course notes, with JavaScript simulations</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://landgreen.github.io/physics/index.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lilgreenland">lilgreenland</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 11:10:46 &nbsp;•&nbsp;
-                                    2 comments &nbsp;•&nbsp;
-                                    6.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17173987">GitHub and ZenHub give us a glimpse into the collaborative future of work</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176458">Reverse emulating the NES to give it SUPER POWERS</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176889">Papua New Guinea bans Facebook for a month to root out 'fake users'</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://youtube.com/watch?v=ar9WRwCiSr0">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=crtasm">crtasm</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 04:17:13 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.theguardian.com/world/2018/may/29/papua-new-guinea-facebook-ban-study-fake-users">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 06:21:06 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     5.0 points
                                 </span>
                             </td>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176208">US Life Expectancy Likely to Drop for Third Straight Year</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176458">Reverse emulating the NES to give it SUPER POWERS</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.geek.com/science/us-life-expectancy-likely-to-drop-for-third-straight-year-1741319/?source">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=sudouser">sudouser</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 03:15:20 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://youtube.com/watch?v=ar9WRwCiSr0">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=crtasm">crtasm</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 04:17:13 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
                                     5.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 12:50:03.300981</strong>
+            <strong>Last update at 2018-05-29 13:00:03.347111</strong>
         </div>
     </div>
 </div>
